# Survey_app

./: .gitignore  README.md  pyproject.toml
survey_app/: __init__.py  __main__.py  app.py  graph_template.html  questions.py  storage.py  truth_web.py
